--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,6 +118,66 @@ nav {
   user-select: none;
 }
 
+.toc {
+  margin-left: 1rem;
+  transition-timing-function: cubic-bezier(0.4, 0, 0, 1);
+  transition: transform 0.2s, opacity 0.2s;
+}
+
+.toc ul {
+  list-style: none;
+  padding: 0 8px;
+  margin: 0;
+}
+
+.toc li {
+  position: relative;
+  line-height: 1.5;
+  font-size: var(--link-font-size);
+  min-height: 1.5em;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4px;
+  padding: 2px 6px;
+  width: fit-content;
+  font-size: 13px;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.toc li a {
+  display: inline-block;
+  color: #aaa;
+  text-decoration: none;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  @apply dark:hover:text-white;
+}
+
+.toc li a:hover {
+  color: rgb(75, 85, 99);
+}
+
+.dark .toc li a:hover {
+  color: rgb(209, 213, 219);
+}
+
+.toc li.active-anchor-link {
+  @apply bg-gray-200 text-black dark:bg-gray-700;
+  border-radius: 4px;
+}
+
+.toc li.active-anchor-link > a {
+  color: rgb(75, 85, 99);
+}
+
+.dark .toc li.active-anchor-link > a {
+  color: rgb(209, 213, 219);
+}
+
+.cover-wrapper > span {
+  position: absolute !important;
+  inset: 0;
+}
+
 @media (min-width: 768px) {
   .sticky-nav-full {
     @apply max-w-full border-b border-opacity-50 border-gray-200 dark:border-gray-600 dark:border-opacity-50;
