--- a/styles/globals.css
+++ b/styles/globals.css
@@ -119,7 +119,7 @@ nav {
 }
 
 .toc {
-  margin-left: 1rem;
+  margin-left: 20px;
   transition-timing-function: cubic-bezier(0.4, 0, 0, 1);
   transition: transform 0.2s, opacity 0.2s;
 }
